@@ -199,6 +199,19 @@ class ExportImportZCMLLayer:
         cleanUp()
 
 
+# Derive from ZopeLite layer if available
+try:
+    from Testing.ZopeTestCase.layer import ZopeLite
+except ImportError:
+    pass # Zope < 2.11
+else:
+    EventZCMLLayer.__bases__ = (ZopeLite,)
+    TraversingZCMLLayer.__bases__ = (ZopeLite,)
+    TraversingEventZCMLLayer.__bases__ = (ZopeLite,)
+    FunctionalZCMLLayer.__bases__ = (ZopeLite,)
+    ExportImportZCMLLayer.__bases__ = (ZopeLite,)
+
+
 def run(test_suite):
     options = testrunner.get_options()
     options.resume_layer = None
