@@ -43,3 +43,13 @@ class ExportImportZCMLLayer:
     @classmethod
     def tearDown(cls):
         cleanUp()
+
+
+# Derive from ZopeLite layer if available
+try:
+    from Testing.ZopeTestCase.layer import ZopeLite
+except ImportError:
+    pass # Zope < 2.11
+else:
+    ExportImportZCMLLayer.__bases__ = (ZopeLite,)
+
